--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
-face-recognition==1.3.0
-face_recognition_models==0.3.0
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-numpy==1.26.4
-oauthlib==3.2.2
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-opencv-python-headless==4.10.0.84
-openpyxl==3.1.5
-pillow==10.2.0
-scipy==1.14.0
-streamlit==1.37.0
-streamlit-drawable-canvas==0.9.3
-torch==2.2.2
-wheel==0.43.0
+streamlit
+opencv-python
+numpy
+pandas
+Pillow
+streamlit-drawable-canvas
