--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit
-opencv-python
-opencv-contrib-python
+streamlit==1.4.0
 opencv-python-headless==4.5.5.62
-numpy
-pandas
-Pillow
-streamlit-drawable-canvas
+pandas==1.3.5
+Pillow==8.4.0
