--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-cmake
-streamlit==1.4.0
-opencv-python-headless==4.5.5.62
-pandas==1.3.5
-Pillow==9.4.0
+cmake==3.30.0
+opencv-python-headless==4.10.0.84
+pandas==2.2.2
+Pillow==10.2.0
+streamlit==1.37.0
+opencv-python==4.10.0.84
+numpy==1.26.4
+matplotlib==3.9.1
